trunk/Archive2/96/66b84f500bc1b1/main.cpp
#include <tuple>
struct A : public std::tuple<int, double> {};

int main() {
  A t;
  int i;
  double j;
  std::tie(i,j)=t;
}
